[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -65.5
margin_right = 87.0
margin_bottom = 65.5
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer"]
margin_right = 174.0
margin_bottom = 41.0
text = "BANNER"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 174.0
margin_bottom = 86.0
text = "INTERSTITIAL"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 174.0
margin_bottom = 131.0
text = "REWARD"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
